# compiled_python

./: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
interface/: example.i
lib/: example.cpp  example.hpp
